# magicover

./: .gitignore  CMakeLists.txt  boss.cpp  boss.h  creature.cpp  creature.h  enemy.cpp  enemy.h  loader.cpp  loader.h  main.cpp  res_manager.cpp  res_manager.h  ring.cpp  ring.h
core/: main.cpp  res_manager.cpp  res_manager.h  stats.h
core/creatures/: boss.cpp  boss.h  creature.cpp  creature.h  enemy.cpp  enemy.h  mage.cpp  mage.h
core/data/: data.json
core/gamemode/: gamemode.cpp  gamemode.h  map.cpp  map.h  mapgenerator.cpp  mapgenerator.h
core/render/: renderer.cpp  renderer.h
core/resources/: creature_stats.h  res_manager.cpp  res_manager.h  ring_stats.h
core/rings/: ring.cpp  ring.h
data/: creatures.json  rings.json
